Fix the shift of focus ring.

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -141,6 +141,10 @@
   --docsearch-searchbox-shadow: inset 0 0 0 2px var(--docsearch-primary-color);
 }
 
+.DocSearch-Hit a {
+  outline-offset: -1px;
+}
+
 .DocSearch-Button {
   box-shadow: inset 0 0 0 1px var(--ifm-color-emphasis-300);
 }
